--- a/Index.html
+++ b/Index.html
@@ -15,8 +15,24 @@
             color: white;
             padding: 15px;
             text-align: center;
-            font-size: 1.5rem;
+            font-size: 1.8rem;
             font-weight: bold;
+        }
+        nav {
+            background: #ffb84d;
+            display: flex;
+            justify-content: center;
+            padding: 10px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            padding: 8px 15px;
+            font-weight: bold;
+        }
+        nav a:hover {
+            background: #ff9800;
+            border-radius: 5px;
         }
         .container {
             display: grid;
@@ -51,35 +67,10 @@
             background: #ff9800;
             color: white;
             text-align: center;
-            padding: 10px;
+            padding: 15px;
             margin-top: 20px;
         }
     </style>
 </head>
 <body>
-    <header>Magadh-e-Mithas 🍬</header>
-    <div class="container">
-        <div class="card">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Gulab_jamun_%28homemade%29.jpg/640px-Gulab_jamun_%28homemade%29.jpg" alt="Gulab Jamun">
-            <h3>Gulab Jamun</h3>
-            <p>₹200 per kg</p>
-        </div>
-        <div class="card">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/Rasgulla.jpg/640px-Rasgulla.jpg" alt="Rasgulla">
-            <h3>Rasgulla</h3>
-            <p>₹180 per kg</p>
-        </div>
-        <div class="card">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Barfi_indian_sweets.jpg/640px-Barfi_indian_sweets.jpg" alt="Barfi">
-            <h3>Barfi</h3>
-            <p>₹220 per kg</p>
-        </div>
-        <div class="card">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d2/Ladoo_sweet.jpg/640px-Ladoo_sweet.jpg" alt="Ladoo">
-            <h3>Motichoor Ladoo</h3>
-            <p>₹250 per kg</p>
-        </div>
-    </div>
-    <footer>© 2025 Magadh-e-Mithas | Taste of Tradition</footer>
-</body>
-</html>
+    <header>Magadh-e-Mithas
